--- a/com.farmacia.jersey/.classpath
+++ b/com.farmacia.jersey/.classpath
@@ -6,20 +6,41 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/aopalliance-repackaged-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/asm-debug-all-5.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/hk2-api-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/hk2-locator-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/hk2-utils-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/javax.inject-2.3.0-b10.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/jersey-client.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/jersey-common.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/jersey-guava-2.13.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/jersey-server.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/org.osgi.core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/software/jersey-jaxrs-ri-2.22/mi_lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_65">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
