--- a/com.farmacia.jersey/pom.xml
+++ b/com.farmacia.jersey/pom.xml
@@ -56,6 +56,17 @@
 	<groupId>javax.servlet</groupId>
 	<artifactId>servlet-api</artifactId>
 	<version>2.5</version>
-</dependency>        
+</dependency>
+        <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.38</version>
+</dependency>
+        <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-mxj</artifactId>
+	<version>5.0.12</version>
+</dependency>
+        
     </dependencies>
 </project>
