--- a/com.farmacia.jersey/WebContent/WEB-INF/web.xml
+++ b/com.farmacia.jersey/WebContent/WEB-INF/web.xml
@@ -7,9 +7,7 @@
      <!-- Register resources and providers under com.vogella.jersey.first package. -->
     <init-param>
         <param-name>jersey.config.server.provider.packages</param-name>
-        <param-value>com.farmacia.jersey.producto.resource,
-         com.fasterxml.jackson.jaxrs.json
-         </param-value>
+        <param-value>com.farmacia.jersey.producto.resource</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
